- fixed the nav bar not covering the swiper component

--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
 
     .home-page-content {
-        // padding: 0px 30px; -> find a way to push everything inside the container, 
+        // padding: 0px 30px; -> find a way to push everything inside the container,
+        .dish-list {
+        }
     }
 }
