--- a/src/pages/homePage/components/IntroSearch/IntroSearch.scss
+++ b/src/pages/homePage/components/IntroSearch/IntroSearch.scss
@@ -1,4 +1,4 @@
-// @import "../../../../assets/scss/variables.scss";
+@import "../../../../styles/utilities/variables.scss";
 
 .intro-search {
     position: relative;
@@ -12,7 +12,7 @@
         background-repeat: no-repeat;
         display: block;
 
-        @media (min-width: 768px) {
+        @media (min-width: $desktop-breakpoint) {
             // width: auto;
             // height: auto;
         }
