--- a/src/shared/components/Header/Header.scss
+++ b/src/shared/components/Header/Header.scss
@@ -8,7 +8,7 @@
     padding-top: 24px;
     padding-bottom: 20px;
     background-color: white;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     position: sticky;
     // padding-bottom: 20px;
